[playground] fix overflow in safari (#4406)
* [playground] fix overflow in safari

* options panel will not outgrow editors panel

* fix overflow in safari 10.1

* fix odd code mirror gutter placement during overflow

--- a/website/static/separate-css/playground.css
+++ b/website/static/separate-css/playground.css
@@ -145,6 +145,10 @@ pre.CodeMirror-placeholder {
   color: #888888;
 }
 
+.editors .CodeMirror-scroll {
+  position: static;
+}
+
 .bottom-bar {
   position: relative;
 }
@@ -180,7 +184,7 @@ pre.CodeMirror-placeholder {
   display: none;
   box-sizing: border-box;
   width: 225px;
-  height: 100%;
+  overflow-y: auto;
   border-bottom: 1px solid #ddd;
   border-right: 1px solid #ddd;
   flex: 0 1 auto;
